# backend_X

./: .gitignore  db.sqlite3  main.py  pyproject.toml  requirements.txt
backend/: asgi.py  middleware.py  routing.py  settings.py  urls.py
billets/: models.py  serializers.py  urls.py  views.py
billets/migrations/: 0001_initial.py  0002_initial.py  0003_remove_billet_participant.py  0004_billet_participant.py
evenements/: apps.py  models.py  serializers.py  signals.py  urls.py  views.py
evenements/migrations/: 0001_initial.py  0002_initial.py  0003_evenement_photo.py  0004_evenement_evenementlibre.py  0005_evenement_prix.py
event/: models.py  serializers.py  urls.py  views.py
event/migrations/: 0001_initial.py  0002_event_qr_code_image.py  0003_event_organizer.py
notifications/: consumers.py  models.py  serializers.py  urls.py  views.py
notifications/migrations/: 0001_initial.py
room/: consumers.py  models.py  routing.py  urls.py  views.py
room/migrations/: 0001_initial.py
templates/emails/: organizer_decision.html  ticket_confirmation.html
ticket/: models.py
ticket/migrations/: 0001_initial.py  0002_ticketpurchase_session_id.py
user/: email.py  models.py  serializers.py  urls.py  views.py
user/migrations/: 0001_initial.py  0002_alter_user_prenom.py  0003_alter_user_prenom.py  0004_alter_user_role.py  0005_user_is_email_verified.py  0006_user_password_reset_token.py  0007_user_email_verification_token.py  0008_user_facebook_user_mode_financement_and_more.py
user_messages/: models.py  serializers.py  urls.py  views.py
(+3 files in other folders)
